// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expect multiple with a total of 94.34 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     with a total of 
    $471.45
  </h1>
</div>
`;

exports[`expect one expense with a total of 195 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     with a total of 
    $1.95
  </h1>
</div>
`;
